# signal-ha

./: .gitignore  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: docs.yml
crates/message-board/: Cargo.toml
crates/message-board/src/: db.rs  main.rs  routes.rs
crates/message-board/tests/: api_tests.rs  db_tests.rs
crates/signal-ha/: Cargo.toml
crates/signal-ha-agent/: Cargo.toml
crates/signal-ha-agent/src/: conversation.rs  engine.rs  ha_host.rs  ha_tools.rs  lib.rs  memory.rs  parser.rs  session.rs  tools.rs
crates/signal-ha-lighting/: Cargo.toml
crates/signal-ha-lighting/src/: actuator.rs  lib.rs  lux.rs  overlay.rs  reconcile.rs  signature.rs  target.rs  util.rs
crates/signal-ha-py/: Cargo.toml
crates/signal-ha-py/src/: lib.rs
crates/signal-ha-recorder/: Cargo.toml
crates/signal-ha-recorder/src/: curator.rs  deletion_reason.rs  error.rs  filter.rs  lib.rs  mysql_store.rs  recorder.rs  sqlite.rs  store.rs  store_trait.rs
crates/signal-ha-shell/: Cargo.toml
crates/signal-ha-shell/src/: convert.rs  ext_functions.rs  host_call.rs  lib.rs  repl.rs
crates/signal-ha/src/: client.rs  dashboard.rs  lib.rs  power_fsm.rs  scheduler.rs  status.rs  types.rs
docs/: architecture.md  getting-started.md  index.md
docs/crates/: message-board.md  signal-ha-agent.md  signal-ha-lighting.md  signal-ha-py.md  signal-ha-recorder.md  signal-ha-shell.md  signal-ha.md
docs/stylesheets/: extra.css
specs/: signal-ha-helpers.md
