[package]
name = "signal-ha-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Selective entity state recorder with SQLite storage — subscribe, record, query, prune"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# The core library (HaClient, EntityState, StateChange)
signal-ha = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
