[package]
name = "signal-ha-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pluggable entity state recorder — trait-based storage with SQLite and MySQL backends"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
mysql = ["dep:mysql"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# SQLite (optional backend)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# MySQL (optional backend)
mysql = { version = "25", optional = true }

# The core library (HaClient, EntityState, StateChange)
signal-ha = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
